
	- diamond heads (probably really ugly).
	- cross head.
	- tweaked harmonic head a bit.
	- property noteHeadStyle

pl 36.mb2
	- bf: timeSignatureStyle
	- Added dynamic fz (forzando) to Lilypond
	- bf: N.W.Gade, sfz -> fz

pl 36.hwn1
	- debian fixes.
	- don't insert extra alignment space for empty stuff.
	- Align_element derives from Axis_group_element
	- junk all *{horizontal,vertical}* Score_element derived classes.
	- G_staff_side_item::padding_f_ now generic property.
	- some tweaking of beam & stem. 
	- junk pointerlist in Sources
	- junk Stem::mult_i_, Stem::beam_gap_i_, G_staff_side_item::padding
	Bar::at_line_start_b_, Key_item::c_position_, Note_head::type_str_,
	Note_head::staff_size, Stem::xdir_
	
pl 36.mb1
	- bf: N.W.Gade

**************

pl 35.uu1
	- more memory tweaks: don't do Score_element::line_l () when deleting lines.
	- more generic properties.
	- change ridic. dims assert into warning.
	- tex/ midi fixes (thanks, Mats).
	- bf: don't crash when no Stem_infos are set.
	- extender-spanner simplification
	- working MIDI chords (Thanks Dscho)

pl 35.jcn1
	- some ps fixes

************
pl 35

pl 34.hwn2
	- "Lily Was Here" is def'd as \mudelatagline, override with
	\header { tagline = "... " ; }
	- \property currentBarNumber: set
	current bar number.
	- \property postBreakPadding: tune extra
	space padding after linebreaks.
	- \property textEmptyDimension: disregard script text
	dimensions (untested)
	- \property staffLineLeading: set the staff space
	- adjustable staff space size (per staff)
	- Staff_symbol_referencer as base class for elements that use
	info of the staff symbol.  \property numberOfStaffLines also works  OK
	with ledger lines. (Is that useful? dunno.)
	- warning  if someone does \translator with no name
	- junk Item::breakable_b_
	- junk PointerList<Music*>, use Killing_cons
	- bf: Auto_beam_engraver.
	- bf: mmrest engraver.
	- use callbacks for Dimension_cache.
	- lots of small cleanups. Junk various members of