@@ -55,6 +55,13 @@ Rest_engraver::do_process_requests ()
 	  rest_p_->dots_l_  =dot_p_;
 	  announce_element (Score_element_info (dot_p_,0));
 	}
+      if (rest_p_->balltype_i_ >= 2) 
+	{
+	  String reststyle = get_property ("restStyle", 0);
+	  if (reststyle.length_i ())
+	    rest_p_->set_elt_property (style_scm_sym,
+					 gh_str02scm (reststyle.ch_C()));
+	}
       announce_element (Score_element_info (rest_p_, rest_req_l_));
     }
 }
