@@ -40,7 +40,14 @@ Rest::do_brew_molecule_p () const
   bool streepjes_b = abs(position_i_) > lines_i () / 2 &&  
     (balltype_i_ == 0 || balltype_i_ == 1);
   
-  Molecule s(lookup_l ()->rest (balltype_i_, streepjes_b));
+  String style; 
+  SCM style_sym =get_elt_property (style_scm_sym);
+  if (style_sym != SCM_BOOL_F)
+    {
+      style = ly_scm2string (SCM_CDR(style_sym));
+    }
+  
+  Molecule s(lookup_l ()->rest (balltype_i_, streepjes_b, style));
   Molecule * m = new Molecule ( Molecule (s));
   m->translate_axis (position_i_ *  staff_line_leading_f ()/2.0, Y_AXIS);
   return m;
