@@ -34,9 +34,9 @@ if test = 0:
 	input feta-klef;
 	input feta-timesig;
 else:
-	input feta-bolletjes;	
+%	input feta-bolletjes;	
 %	input feta-banier;
-%	input feta-eindelijk;
+ 	input feta-eindelijk;
 %	input feta-klef;
 %	input feta-toevallig;
 %	input feta-schrift;
